PROJECT(baremetal)

CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
ENABLE_LANGUAGE(ASM)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(delay)
IF(BUILD_I2C)
    ADD_SUBDIRECTORY(i2c)
ENDIF(BUILD_I2C)
IF(BUILD_GPIO)
    ADD_SUBDIRECTORY(gpio)
ENDIF(BUILD_GPIO)
IF(BUILD_SPI)
    ADD_SUBDIRECTORY(spi)
ENDIF(BUILD_SPI)
IF(BUILD_DRIVERS)
    ADD_SUBDIRECTORY(drivers)
ENDIF(BUILD_DRIVERS)
