INCLUDE_DIRECTORIES(
    ${CMAKE_SOURCE_DIR}/include
)

SET(BAREMETAL_DELAY_SOURCES
    delay.c
)

ADD_LIBRARY(bm_delay ${BAREMETAL_DELAY_SOURCES})

INSTALL(TARGETS bm_delay RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES 
    ${CMAKE_SOURCE_DIR}/include/bm/delay.h
    DESTINATION
    include/bm/
)