INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_GPIO_SOURCES
    gpio.c
)

FOREACH(PLATFORM ${PLATFORMS}) 
    ADD_SUBDIRECTORY(platforms/${PLATFORM})
ENDFOREACH(PLATFORM)

ADD_LIBRARY(bm_gpio ${BAREMETAL_GPIO_SOURCES})

INSTALL(TARGETS bm_gpio RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/bm/gpio.h
    DESTINATION include/bm/
)