INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_I2C_SOURCES
    i2c.c
)

FOREACH(PLATFORM ${PLATFORMS}) 
    ADD_SUBDIRECTORY(platforms/${PLATFORM})
ENDFOREACH(PLATFORM)

ADD_LIBRARY(bm_i2c ${BAREMETAL_I2C_SOURCES})

INSTALL(TARGETS bm_i2c RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES 
    ${CMAKE_SOURCE_DIR}/include/bm/i2c.h
    DESTINATION
    include/bm/
)