INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_SPI_SOURCES
    spi.c
)

FOREACH(PLATFORM ${PLATFORMS}) 
    ADD_SUBDIRECTORY(platforms/${PLATFORM})
ENDFOREACH(PLATFORM)

ADD_LIBRARY(bm_spi ${BAREMETAL_SPI_SOURCES})

INSTALL(TARGETS bm_spi RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/bm/spi.h DESTINATION include/bm/)