INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_BMP085_SOURCES
    bmp085.c
)

ADD_LIBRARY(bm_bmp085 ${BAREMETAL_BMP085_SOURCES})

INSTALL(TARGETS bm_bmp085 RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES 
    ${CMAKE_SOURCE_DIR}/include/bm/bmp085.h
    DESTINATION
    include/bm/
)