INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_MCP9804_SOURCES
    mcp9804.c
)

ADD_LIBRARY(bm_mcp9804 ${BAREMETAL_MCP9804_SOURCES})

INSTALL(TARGETS bm_mcp9804 RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/bm/mcp9804.h DESTINATION include/bm/)