INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_SHT1X_SOURCES
    sht1x.c
)

ADD_LIBRARY(bm_sht1x ${BAREMETAL_SHT1X_SOURCES})

INSTALL(TARGETS bm_sht1x RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/bm/sht1x.h DESTINATION include/bm/)