INCLUDE_DIRECTORIES(
    ${CMAKE_CURRENT_SOURCE_DIR}
)

SET(BAREMETAL_SST25_SOURCES
    sst25.c
)

ADD_LIBRARY(bm_sst25 ${BAREMETAL_SST25_SOURCES})

INSTALL(TARGETS bm_sst25 RUNTIME DESTINATION bin LIBRARY DESTINATION lib ARCHIVE DESTINATION lib)
INSTALL(FILES ${CMAKE_SOURCE_DIR}/include/bm/sst25.h DESTINATION include/bm/)